--- a/MultiDatabases/MultiDatabases.API/appsettings.Development.json
+++ b/MultiDatabases/MultiDatabases.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AAA01": "AAA01",
+    "AAA02": "AAA02",
+    "BBB": "BBB"
   }
 }
