--- a/MultiDatabases/MultiDatabases.Application/MultiDatabases.Application.csproj
+++ b/MultiDatabases/MultiDatabases.Application/MultiDatabases.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MultiDatabases.Domain\MultiDatabases.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
