Connection string with placeholder

--- a/MultiDatabases/MultiDatabases.API/appsettings.Development.json
+++ b/MultiDatabases/MultiDatabases.API/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "AAA01": "AAA01",
-    "AAA02": "AAA02",
-    "BBB": "BBB"
+    "DefaultConnection": "Server=AAA;Initial Catalog=AAA01;User Id=SA;Password=ChangeIt123",
+    "AAA": "Server=AAA;Initial Catalog={dbName};User Id=SA;Password=ChangeIt123",
+    "BBB": "Server=BBB;Initial Catalog=BBB;User Id=SA;Password=ChangeIt123"
   }
 }
