--- a/MultiDatabases/MultiDatabases.Infrastructure/MultiDatabases.Infrastructure.csproj
+++ b/MultiDatabases/MultiDatabases.Infrastructure/MultiDatabases.Infrastructure.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MultiDatabases.Application\MultiDatabases.Application.csproj" />
     <ProjectReference Include="..\MultiDatabases.Domain\MultiDatabases.Domain.csproj" />
   </ItemGroup>
